# OCR_in_Cpp

./: CMakeLists.txt  README.md  main.cpp
